# sst-rust-template

./: .env  .gitignore  Cargo.toml  README.md  go.mod  go.sum  package-lock.json  package.json  schema.sql  sst.config.ts
.github/workflows/: deploy.yaml  pull-request.yaml  push-main.yaml  push-release.yaml  tag.yaml  test.yaml
config/: DatabaseConfig.ts
domain/sample/: Cargo.toml
domain/sample/src/: model.rs  repository.rs  service.rs
domain/sample/src/api/admin/: create.rs  delete.rs  get.rs  page.rs  update.rs
domain/sample/src/api/v1/: get.rs  seek.rs
domain/sample/src/sql/: count.sql  create.sql  delete.sql  page.sql  translations_create.sql  translations_delete.sql  translations_upsert.sql  update.sql
function/: Cargo.toml
function/api/: default.rs
function/api/admin/samples/: create.rs  delete.rs  get.rs  list.rs  page.rs  update.rs
function/api/v1/samples/: get.rs  seek.rs
function/src/api/: default.rs
functions/: default.go
functions/admin/samples/: sample.go
functions/admin/samples/get/: main.go
functions/admin/samples/save/: main.go
functions/api/: default.rs
functions/api/admin/samples/: admin_sample_create.rs  admin_sample_delete.rs  admin_sample_get.rs  admin_sample_list.rs  admin_sample_update.rs  list.rs  sample.go  sample_create.rs  sample_get.rs  sample_list.rs
functions/api/admin/samples/delete/: main.go
functions/api/admin/samples/get/: main.go
functions/api/admin/samples/list/: main.go
functions/api/admin/samples/save/: main.go
functions/api/admin/samples/update/: main.go
functions/api/v1/samples/: sample_get.rs  sample_seek.rs  seek.rs
functions/auth/post_confirmation/: main.go
functions/v1/samples/: sample.go
functions/v1/samples/get/: main.go
functions/v1/samples/save/: main.go
internal/db/: database.go  error.go  parser.go  transaction.go
internal/message/: generic.go  template.go  validation.go
internal/model/: chan.go  page.go
internal/model/sample/: repository.go  service.go
internal/request/: authorizer.go  header.go  path.go  query.go
internal/response/: error.go  json.go
internal/storage/: parameter.go
internal/validation/: validator.go
lib/database/: Cargo.toml
lib/database/src/: error_parser.rs  lib.rs  postgres.rs
lib/lambda/: Cargo.toml
lib/lambda/src/: context.rs  header.rs  json.rs  lib.rs  page.rs  path.rs  query.rs  request.rs  seek.rs  tracing.rs
lib/model/: Cargo.toml
lib/model/src/: error.rs  lib.rs  page.rs  seek.rs  serde.rs  validation.rs
lib/storage/: Cargo.toml
lib/storage/src/: secret.rs
migrations/: 1_init.sql
src/: lib.rs
src/config/: mod.rs  serde.rs  tracing.rs
src/database/: postgres.rs  repository.rs
src/domain/sample/: model.rs  repository.rs  service.rs
src/domain/sample/sql/: get.sql  list_translations.sql  seek.sql  translations_create.sql  translations_upsert.sql
src/error/: mod.rs  parser.rs  result.rs
src/model/: mod.rs  translation.rs
src/model/sample/: repository.rs  service.rs
src/request/: context.rs  header.rs  mod.rs  page.rs  path.rs  query.rs  seek.rs  validator.rs
src/response/: json.rs  mod.rs  page.rs  seek.rs
stack/: Database.ts
stack/admin/: AdminApi.ts  AdminAuth.ts
stack/customer/: CustomerApi.ts  CustomerAuth.ts
stacks/: AdminApiStack.ts  AdminAuthStack.ts  ApiStack.ts  AuthStack.ts  CustomerApiStack.ts  CustomerAuthStack.ts  DatabaseStack.ts
stacks/admin/: AdminApiStack.ts  AdminAuthStack.ts
stacks/customer/: CustomerApiStack.ts  CustomerAuthStack.ts
test/admin/: AdminApi.test.ts  AdminAuth.test.ts
test/customer/: CustomerApi.test.ts  CustomerAuth.test.ts
