[package]
name = "sst-rust-template"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
lambda_http = { version = "0.10.0", optional = true }
lambda_runtime = { version = "0.10.0", optional = true }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
async-trait = "0.1.78"
time = { version = "0.3.34", features = ["serde"] }
log = "0.4.21"
regex = "1.10.3"
convert_case = "0.6.0"
serde_json = "1.0.114"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.19.0"
serde_with = { version = "3.7.0", features = ["json"] }
validator = { version = "0.17.0", features = ["derive"] }
serde_trim = "1.1.0"
once_cell = "1.19.0"

[features]
default = ["lambda"]
lambda = ["lambda_runtime", "lambda_http"]

# Default API
[[bin]]
name = "api_default"
path = "function/api/default.rs"

# Admin APIs
[[bin]]
name = "api_admin_sample_page"
path = "function/api/admin/samples/page.rs"

[[bin]]
name = "api_admin_sample_create"
path = "function/api/admin/samples/create.rs"

[[bin]]
name = "api_admin_sample_get"
path = "function/api/admin/samples/get.rs"

[[bin]]
name = "api_admin_sample_update"
path = "function/api/admin/samples/update.rs"

[[bin]]
name = "api_admin_sample_delete"
path = "function/api/admin/samples/delete.rs"

# Customer APIs
[[bin]]
name = "api_v1_sample_seek"
path = "function/api/v1/samples/seek.rs"

[[bin]]
name = "api_v1_sample_get"
path = "function/api/v1/samples/get.rs"
