[workspace]
package.edition = "2021"
package.version = "0.0.1"
resolver = "2"
members = [
    "function",
    "domain/sample",
    "lib/database",
    "lib/model",
    "lib/lambda",
    "lib/storage",
]

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.78"
lambda_http = { version = "0.10.0" }
lambda_runtime = { version = "0.10.0" }
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.19.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = { version = "3.7.0", features = ["json"] }
serde_trim = "1.1.0"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
] }
time = { version = "0.3.34", features = ["formatting", "parsing", "serde"] }
regex = "1.10.3"
convert_case = "0.6.0"
validator = { version = "0.17.0", features = ["derive"] }
once_cell = "1.19.0"
