[workspace]
package.edition = "2021"
package.version = "0.0.1"
resolver = "2"
members = [
    "domain/sample",
    "function",
    "lib/database",
    "lib/model",
    "lib/lambda",
]

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.78"
lambda_http = { version = "0.11.1" }
lambda_runtime = { version = "0.11.1" }
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = "1.19.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_with = { version = "3.7.0", features = ["json"] }
serde_trim = "1.1.0"
sqlx = { version = "0.7.4", features = [
    "runtime-tokio-rustls",
    "postgres",
    "time",
    "rust_decimal",
] }
time = { version = "0.3.34", features = ["formatting", "parsing", "serde"] }
regex = "1.10.3"
convert_case = "0.6.0"
# TODO: upgrade when this is fixed: https://github.com/Keats/validator/issues/307
validator = { version = "0.15.0", features = ["derive"] }
once_cell = "1.19.0"
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
